--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #ffffff;  /* Default background color */
+    background-color: #333333;  /* Default background color */
     color: #000000;  /* Default text color */
 }
 
