--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ header {
     margin: 0 auto;
     font-size: 1.2em;
     line-height: 1.6;
-    background-color: white;
+    background-color: #717171;
     padding: 20px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
